--- a/notebooks/calculate_min_libraries_distance.ipynb
+++ b/notebooks/calculate_min_libraries_distance.ipynb
@@ -4,16 +4,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import geojson"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -24,43 +14,49 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "import geojson\n",
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
-    "houses_df = pd.read_csv('../data_4/property_4_lat_lon.csv')  \n",
-    "police_df = pd.read_csv('../data_4/api/victoria_police_stations.csv') \n",
+    "# 读取房屋和车站的 CSV 文件\n",
+    "houses_df = pd.read_csv('/Users/fenglingyi/Downloads/groupwork_final/property_addresses_to_lat_lng_2_final.csv')  # 替换为你的房屋CSV文件路径\n",
+    "librarys_df = pd.read_csv('/Users/fenglingyi/Downloads/groupwork_file/victoria_libraries.csv')  # 替换为你的车站CSV文件路径\n",
+    "\n",
     "houses_df = houses_df.dropna(subset=['longitude', 'latitude'])\n",
-    "police_df = police_df.dropna(subset=['longitude', 'latitude'])\n",
+    "librarys_df = librarys_df.dropna(subset=['longitude', 'latitude'])\n",
     "\n",
     "\n",
-    "### create GeoJSON Feature \n",
+    "# 创建 GeoJSON Feature 的函数\n",
     "def create_geojson_feature(row, feature_type='house'):\n",
     "    point = Point((row['longitude'], row['latitude']))\n",
     "    properties = {\n",
-    "        'address': row.get('address', 'unknown'),  \n",
+    "        'address': row.get('address', 'unknown'),  # 如果没有 'address' 列，请根据你的实际列修改\n",
     "        'type': feature_type\n",
     "    }\n",
     "    return Feature(geometry=point, properties=properties)\n",
     "\n",
-    "### convert the data into Geojson\n",
+    "# 转换房屋数据为 GeoJSON Feature\n",
     "house_features = houses_df.apply(lambda row: create_geojson_feature(row, 'house'), axis=1).tolist()\n",
     "house_feature_collection = FeatureCollection(house_features)\n",
     "\n",
-    "police_features = police_df.apply(lambda row: create_geojson_feature(row, 'police'), axis=1).tolist()\n",
-    "police_feature_collection = FeatureCollection(police_features)\n",
+    "# 转换车站数据为 GeoJSON Feature\n",
+    "librarys_features = librarys_df.apply(lambda row: create_geojson_feature(row, 'librarys'), axis=1).tolist()\n",
+    "librarys_feature_collection = FeatureCollection(librarys_features)\n",
     "\n",
     "\n",
-    "### save the geo file\n",
-    "houses_geojson_output_path = '../data_4/api/property_4_geojson.geojson'\n",
-    "police_geojson_output_path = '../data_4/api/victoria_police_stations_geojson.geojson'\n",
+    "# 保存房屋和车站分别为 GeoJSON 文件\n",
+    "houses_geojson_output_path = '/Users/fenglingyi/Downloads/groupwork_generate/property_geojson.geojson'\n",
+    "librarys_geojson_output_path = '/Users/fenglingyi/Downloads/groupwork_generate/vic_libraries_geojson.geojson'\n",
+    "\n",
     "\n",
     "with open(houses_geojson_output_path, 'w') as f:\n",
     "    geojson.dump(house_feature_collection, f)\n",
     "\n",
-    "with open(police_geojson_output_path, 'w') as f:\n",
-    "    geojson.dump(police_feature_collection, f)\n",
+    "with open(librarys_geojson_output_path, 'w') as f:\n",
+    "    geojson.dump(librarys_feature_collection, f)\n",
     "\n",
     "\n",
-    "print(\"Geojson created\")\n"
+    "print(\"房屋和车站的GeoJSON文件已生成\")\n"
    ]
   },
   {
@@ -72,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "结果已保存到 ../data_4/api/results/closest_police_distance_final_4.csv\n"
+      "结果已保存到 /Users/fenglingyi/Downloads/groupwork_generate/closest_library_distance_final_2.csv\n"
      ]
     }
    ],
@@ -82,18 +78,18 @@
     "import pandas as pd\n",
     "import time\n",
     "\n",
-    "### api client\n",
-    "api_key = '5b3ce3597851110001cf6248c2b2602de2dc43afa9f186cdfc39caca' \n",
+    "# 初始化 OpenRouteService API 客户端\n",
+    "api_key = '5b3ce3597851110001cf6248dda07331ae64496fa25c4e54b59fba30'  # 请替换为你的 OpenRouteService API Key\n",
     "client = openrouteservice.Client(key=api_key)\n",
     "\n",
-    "### read Geojson\n",
-    "with open('../data_4/api/property_4_geojson.geojson', 'r') as f:\n",
+    "# 读取 GeoJSON 文件\n",
+    "with open('/Users/fenglingyi/Downloads/groupwork_generate/property_geojson.geojson', 'r') as f:\n",
     "    rent_geojson = geojson.load(f)\n",
     "\n",
-    "with open('../data_4/api/victoria_police_stations_geojson.geojson', 'r') as f:\n",
-    "    police_geojson = geojson.load(f)\n",
+    "with open('/Users/fenglingyi/Downloads/groupwork_generate/vic_libraries_geojson.geojson', 'r') as f:\n",
+    "    librarys_geojson = geojson.load(f)\n",
     "\n",
-    "### create the function to get the latitude and longtitude\n",
+    "# 提取经纬度\n",
     "def extract_coordinates(features):\n",
     "    coordinates = []\n",
     "    for feature in features['features']:\n",
@@ -103,65 +99,66 @@
     "    return coordinates\n",
     "\n",
     "rent_coordinates = extract_coordinates(rent_geojson)\n",
-    "police_coordinates = extract_coordinates(police_geojson)\n",
+    "librarys_coordinates = extract_coordinates(librarys_geojson)\n",
     "\n",
+    "# 提取房屋和车站的经纬度\n",
     "house_coords = [(lon, lat) for lat, lon, _ in rent_coordinates]\n",
-    "police_coords = [(lon, lat) for lat, lon, _ in police_coordinates]\n",
+    "librarys_coords = [(lon, lat) for lat, lon, _ in librarys_coordinates]\n",
     "\n",
-    "\n",
-    "### using api to calculate the driving distance\n",
-    "def calculate_distance_matrix_in_batches(house_coords, police_coords, batch_size=18):\n",
+    "# 使用 OpenRouteService API 批量计算距离并按批次处理\n",
+    "def calculate_distance_matrix_in_batches(house_coords, librarys_coords, batch_size=12):\n",
     "    all_shortest_distances = []\n",
     "    \n",
     "    for i in range(0, len(house_coords), batch_size):\n",
     "        batch_houses = house_coords[i:i + batch_size]\n",
     "        try:\n",
     "            matrix = client.distance_matrix(\n",
-    "                locations=batch_houses + police_coords,\n",
+    "                locations=batch_houses + librarys_coords,\n",
     "                profile='driving-car',\n",
     "                sources=list(range(len(batch_houses))),\n",
-    "                destinations=list(range(len(batch_houses), len(batch_houses) + len(police_coords))),\n",
+    "                destinations=list(range(len(batch_houses), len(batch_houses) + len(librarys_coords))),\n",
     "                metrics=['distance'],\n",
     "                units='km'\n",
     "            )\n",
     "            distances = matrix['distances']\n",
     "            \n",
-    "            ### find mini distance\n",
+    "            # 处理每个房屋和车站的距离，找出最短的距离\n",
     "            for j, house_distances in enumerate(distances[:len(batch_houses)]):\n",
+    "                # 排除 None 值的距离，找出最小距离\n",
     "                valid_distances = [d for d in house_distances if d is not None]\n",
     "                if valid_distances:\n",
     "                    min_distance = min(valid_distances)\n",
-    "                    closest_police_idx = house_distances.index(min_distance)\n",
+    "                    closest_librarys_idx = house_distances.index(min_distance)\n",
     "                    rent_address = rent_coordinates[i + j][2]\n",
-    "                    closest_police = police_coordinates[closest_police_idx][2]\n",
+    "                    closest_librarys = librarys_coordinates[closest_librarys_idx][2]\n",
     "                    all_shortest_distances.append({\n",
     "                        'rent_address': rent_address,\n",
-    "                        'closest_police': closest_police,\n",
-    "                        'minimum_distance_police': min_distance\n",
+    "                        'closest_librarys': closest_librarys,\n",
+    "                        'minimum_distance_library': min_distance\n",
     "                    })\n",
     "        except Exception as e:\n",
     "            print(f\"Error calculating distance matrix: {e}\")\n",
-    "        time.sleep(1) \n",
+    "        time.sleep(1)  # 防止触发速率限制\n",
     "    \n",
     "    return all_shortest_distances\n",
     "\n",
-    "### batch size the data\n",
-    "shortest_distances = calculate_distance_matrix_in_batches(house_coords, police_coords, batch_size=18)\n",
+    "# 分批处理\n",
+    "shortest_distances = calculate_distance_matrix_in_batches(house_coords, librarys_coords, batch_size=20)\n",
     "\n",
-    "### save data\n",
+    "# 保存最短距离结果为 CSV 文件\n",
     "shortest_distances_df = pd.DataFrame(shortest_distances)\n",
-    "output_path = '../data_4/api/results/closest_police_distance_final_4.csv'\n",
+    "output_path = '/Users/fenglingyi/Downloads/groupwork_final/closest_library_distance_final_2.csv'\n",
     "shortest_distances_df.to_csv(output_path, index=False)\n",
     "\n",
-    "print(f\"saved into {output_path}\")\n"
+    "print(f\"结果已保存到 {output_path}\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (myenv)",
    "language": "python",
-   "name": "python3"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
