--- a/notebooks/police_distance4.ipynb
+++ b/notebooks/police_distance4.ipynb
@@ -7,33 +7,52 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import geojson\n",
+    "import geojson"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
-    "# Read the gym CSV file\n",
-    "market_df = pd.read_csv('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\melbourne_cbd_coordinates.csv')\n",
-    "market_df = market_df.dropna(subset=['Longitude', 'Latitude'])\n",
+    "houses_df = pd.read_csv('../data/curated/property/property_4_lat_lon.csv')  \n",
+    "police_df = pd.read_csv('../data/raw/external/victoria_police_stations.csv') \n",
+    "houses_df = houses_df.dropna(subset=['longitude', 'latitude'])\n",
+    "police_df = police_df.dropna(subset=['longitude', 'latitude'])\n",
     "\n",
-    "# Function to create a GeoJSON Feature\n",
+    "\n",
+    "### create GeoJSON Feature \n",
     "def create_geojson_feature(row, feature_type='house'):\n",
-    "    point = Point((row['Longitude'], row['Latitude']))\n",
+    "    point = Point((row['longitude'], row['latitude']))\n",
     "    properties = {\n",
-    "        'address': row.get('address', 'unknown'),  # Modify 'address' column name as per your actual data\n",
+    "        'address': row.get('address', 'unknown'),  \n",
     "        'type': feature_type\n",
     "    }\n",
     "    return Feature(geometry=point, properties=properties)\n",
     "\n",
-    "# Convert gym data to GeoJSON Features\n",
-    "gym_features = market_df.apply(lambda row: create_geojson_feature(row, 'cbd'), axis=1).tolist()\n",
-    "gym_feature_collection = FeatureCollection(gym_features)\n",
+    "### convert the data into Geojson\n",
+    "house_features = houses_df.apply(lambda row: create_geojson_feature(row, 'house'), axis=1).tolist()\n",
+    "house_feature_collection = FeatureCollection(house_features)\n",
     "\n",
-    "# Save gym data as a GeoJSON file\n",
-    "houses_geojson_output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\cbd_geojson.geojson'\n",
+    "police_features = police_df.apply(lambda row: create_geojson_feature(row, 'police'), axis=1).tolist()\n",
+    "police_feature_collection = FeatureCollection(police_features)\n",
+    "\n",
+    "\n",
+    "### save the geo file\n",
+    "houses_geojson_output_path = '../data/raw/external/API/4/property_4_geojson.geojson'\n",
+    "police_geojson_output_path = '../data/raw/external/API/4/victoria_police_stations_geojson.geojson'\n",
     "\n",
     "with open(houses_geojson_output_path, 'w') as f:\n",
-    "    geojson.dump(gym_feature_collection, f)\n",
+    "    geojson.dump(house_feature_collection, f)\n",
     "\n",
-    "print(\"The GeoJSON file for gym data has been generated\")\n"
+    "with open(police_geojson_output_path, 'w') as f:\n",
+    "    geojson.dump(police_feature_collection, f)\n",
+    "\n",
+    "\n",
+    "print(\"Geojson created\")\n"
    ]
   },
   {
@@ -47,18 +66,18 @@
     "import pandas as pd\n",
     "import time\n",
     "\n",
-    "# Initialize OpenRouteService API client\n",
-    "api_key = '5b3ce3597851110001cf62483b1a72a766444e06858b2f513c1a4ac6'  # OpenRouteService API Key\n",
+    "### api client\n",
+    "api_key = '5b3ce3597851110001cf6248c2b2602de2dc43afa9f186cdfc39caca' \n",
     "client = openrouteservice.Client(key=api_key)\n",
     "\n",
-    "# Read GeoJSON files\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\property_geojson.geojson', 'r') as f:\n",
+    "### read Geojson\n",
+    "with open('../data/raw/external/API/4/property_4_geojson.geojson', 'r') as f:\n",
     "    rent_geojson = geojson.load(f)\n",
     "\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\cbd_geojson.geojson', 'r') as f:\n",
-    "    gym_geojson = geojson.load(f)\n",
+    "with open('../data/raw/external/API/4/victoria_police_stations_geojson.geojson', 'r') as f:\n",
+    "    police_geojson = geojson.load(f)\n",
     "\n",
-    "# Extract latitude and longitude\n",
+    "### create the function to get the latitude and longtitude\n",
     "def extract_coordinates(features):\n",
     "    coordinates = []\n",
     "    for feature in features['features']:\n",
@@ -68,58 +87,57 @@
     "    return coordinates\n",
     "\n",
     "rent_coordinates = extract_coordinates(rent_geojson)\n",
-    "gym_coordinates = extract_coordinates(gym_geojson)\n",
+    "police_coordinates = extract_coordinates(police_geojson)\n",
     "\n",
-    "# Extract coordinates for houses and gyms\n",
     "house_coords = [(lon, lat) for lat, lon, _ in rent_coordinates]\n",
-    "gym_coords = [(lon, lat) for lat, lon, _ in gym_coordinates]\n",
+    "police_coords = [(lon, lat) for lat, lon, _ in police_coordinates]\n",
     "\n",
-    "# Use OpenRouteService API to calculate distance in batches\n",
-    "def calculate_distance_matrix_in_batches(house_coords, gym_coords, batch_size=100):\n",
+    "\n",
+    "### using api to calculate the driving distance\n",
+    "def calculate_distance_matrix_in_batches(house_coords, police_coords, batch_size=18):\n",
     "    all_shortest_distances = []\n",
     "    \n",
     "    for i in range(0, len(house_coords), batch_size):\n",
     "        batch_houses = house_coords[i:i + batch_size]\n",
     "        try:\n",
     "            matrix = client.distance_matrix(\n",
-    "                locations=batch_houses + gym_coords,\n",
+    "                locations=batch_houses + police_coords,\n",
     "                profile='driving-car',\n",
     "                sources=list(range(len(batch_houses))),\n",
-    "                destinations=list(range(len(batch_houses), len(batch_houses) + len(gym_coords))),\n",
+    "                destinations=list(range(len(batch_houses), len(batch_houses) + len(police_coords))),\n",
     "                metrics=['distance'],\n",
     "                units='km'\n",
     "            )\n",
     "            distances = matrix['distances']\n",
     "            \n",
-    "            # Process the distances between each house and gym, finding the shortest\n",
+    "            ### find mini distance\n",
     "            for j, house_distances in enumerate(distances[:len(batch_houses)]):\n",
-    "                # Exclude None values and find the shortest distance\n",
     "                valid_distances = [d for d in house_distances if d is not None]\n",
     "                if valid_distances:\n",
     "                    min_distance = min(valid_distances)\n",
-    "                    closest_gym_idx = house_distances.index(min_distance)\n",
+    "                    closest_police_idx = house_distances.index(min_distance)\n",
     "                    rent_address = rent_coordinates[i + j][2]\n",
-    "                    closest_gym = gym_coordinates[closest_gym_idx][2]\n",
+    "                    closest_police = police_coordinates[closest_police_idx][2]\n",
     "                    all_shortest_distances.append({\n",
     "                        'rent_address': rent_address,\n",
-    "                        'closest_gym': closest_gym,\n",
-    "                        'min_driving_distance_km': min_distance\n",
+    "                        'closest_police': closest_police,\n",
+    "                        'minimum_distance_police': min_distance\n",
     "                    })\n",
     "        except Exception as e:\n",
     "            print(f\"Error calculating distance matrix: {e}\")\n",
-    "        time.sleep(1)  # Prevent rate-limiting\n",
+    "        time.sleep(1) \n",
     "    \n",
     "    return all_shortest_distances\n",
     "\n",
-    "# Process in batches\n",
-    "shortest_distances = calculate_distance_matrix_in_batches(house_coords, gym_coords, batch_size=100)\n",
+    "### batch size the data\n",
+    "shortest_distances = calculate_distance_matrix_in_batches(house_coords, police_coords, batch_size=18)\n",
     "\n",
-    "# Save the shortest distance results to a CSV file\n",
+    "### save data\n",
     "shortest_distances_df = pd.DataFrame(shortest_distances)\n",
-    "output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\closest_cbd_distance_final_1.csv'\n",
+    "output_path = '../data/curated/external/API/4/closest_police_distance_final_4.csv'\n",
     "shortest_distances_df.to_csv(output_path, index=False)\n",
     "\n",
-    "print(f\"Results have been saved to {output_path}\")\n"
+    "print(f\"saved into {output_path}\")\n"
    ]
   }
  ],
@@ -139,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
