--- a/notebooks/station_distance.ipynb
+++ b/notebooks/station_distance.ipynb
@@ -2,61 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "超市的GeoJSON文件已生成\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import geojson\n",
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
-    "# Read the supermarket CSV file\n",
-    "market_df = pd.read_csv('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\\\victoria_supermarkets.csv')\n",
-    "market_df = market_df.dropna(subset=['longitude', 'latitude'])\n",
+    "# Read the house and station CSV files\n",
+    "houses_df = pd.read_csv('../data/curated/property/property_addresses_to_lat_lng.csv')\n",
+    "stations_df = pd.read_csv(\"../data/curated/property/victoria_metro_stations.csv\")\n",
+    "\n",
+    "# Drop rows with missing longitude and latitude\n",
+    "houses_df = houses_df.dropna(subset=['longitude', 'latitude'])\n",
+    "stations_df = stations_df.dropna(subset=['longitude', 'latitude'])\n",
     "\n",
     "# Function to create GeoJSON Features\n",
-    "def create_geojson_feature(row, feature_type='supermarket'):\n",
+    "def create_geojson_feature(row, feature_type='house'):\n",
     "    point = Point((row['longitude'], row['latitude']))\n",
     "    properties = {\n",
-    "        'address': row.get('address', 'unknown'),  # Modify the 'address' column as needed\n",
+    "        'address': row.get('address', 'unknown'),\n",
     "        'type': feature_type\n",
     "    }\n",
     "    return Feature(geometry=point, properties=properties)\n",
     "\n",
-    "# Convert supermarket data to GeoJSON Features\n",
-    "market_features = market_df.apply(lambda row: create_geojson_feature(row, 'supermarket'), axis=1).tolist()\n",
-    "market_feature_collection = FeatureCollection(market_features)\n",
+    "# Convert house data to GeoJSON Features\n",
+    "house_features = houses_df.apply(lambda row: create_geojson_feature(row, 'house'), axis=1).tolist()\n",
+    "house_feature_collection = FeatureCollection(house_features)\n",
     "\n",
-    "# Save supermarkets as a GeoJSON file\n",
-    "houses_geojson_output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\supermarkets_geojson.geojson'\n",
+    "# Convert station data to GeoJSON Features\n",
+    "station_features = stations_df.apply(lambda row: create_geojson_feature(row, 'station'), axis=1).tolist()\n",
+    "station_feature_collection = FeatureCollection(station_features)\n",
+    "\n",
+    "# Save house and station data as separate GeoJSON files\n",
+    "houses_geojson_output_path = '../data/raw/external/API/1/property_geojson.geojson'\n",
+    "stations_geojson_output_path = '../data/raw/external/API/1/vic_metro_stations_geojson.geojson'\n",
     "\n",
     "with open(houses_geojson_output_path, 'w') as f:\n",
-    "    geojson.dump(market_feature_collection, f)\n",
+    "    geojson.dump(house_feature_collection, f)\n",
     "\n",
-    "print(\"The GeoJSON file for supermarkets has been generated\")\n"
+    "with open(stations_geojson_output_path, 'w') as f:\n",
+    "    geojson.dump(station_feature_collection, f)\n",
+    "\n",
+    "print(\"GeoJSON files for houses and stations have been generated\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "结果已保存到 /home/yanbinh/data/closest_market_distance_final_1.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import geojson\n",
     "import openrouteservice\n",
@@ -64,15 +60,15 @@
     "import time\n",
     "\n",
     "# Initialize OpenRouteService API client\n",
-    "api_key = '5b3ce3597851110001cf6248dda07331ae64496fa25c4e54b59fba30'  # Replace with your OpenRouteService API Key\n",
+    "api_key = '5b3ce3597851110001cf6248dda07331ae64496fa25c4e54b59fba30'\n",
     "client = openrouteservice.Client(key=api_key)\n",
     "\n",
     "# Read GeoJSON files\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\property_geojson.geojson', 'r') as f:\n",
+    "with open('../data/raw/external/API/1/property_geojson.geojson', 'r') as f:\n",
     "    rent_geojson = geojson.load(f)\n",
     "\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\supermarkets_geojson.geojson', 'r') as f:\n",
-    "    market_geojson = geojson.load(f)\n",
+    "with open('../data/raw/external/API/1/vic_metro_stations_geojson.geojson', 'r') as f:\n",
+    "    stations_geojson = geojson.load(f)\n",
     "\n",
     "# Extract latitude and longitude\n",
     "def extract_coordinates(features):\n",
@@ -84,30 +80,30 @@
     "    return coordinates\n",
     "\n",
     "rent_coordinates = extract_coordinates(rent_geojson)\n",
-    "market_coordinates = extract_coordinates(market_geojson)\n",
+    "station_coordinates = extract_coordinates(stations_geojson)\n",
     "\n",
-    "# Extract house and supermarket coordinates\n",
+    "# Extract coordinates for houses and stations\n",
     "house_coords = [(lon, lat) for lat, lon, _ in rent_coordinates]\n",
-    "market_coords = [(lon, lat) for lat, lon, _ in market_coordinates]\n",
+    "station_coords = [(lon, lat) for lat, lon, _ in station_coordinates]\n",
     "\n",
     "# Use OpenRouteService API to calculate distances in batches\n",
-    "def calculate_distance_matrix_in_batches(house_coords, market_coords, batch_size=3):\n",
+    "def calculate_distance_matrix_in_batches(house_coords, station_coords, batch_size=12):\n",
     "    all_shortest_distances = []\n",
     "    \n",
     "    for i in range(0, len(house_coords), batch_size):\n",
     "        batch_houses = house_coords[i:i + batch_size]\n",
     "        try:\n",
     "            matrix = client.distance_matrix(\n",
-    "                locations=batch_houses + market_coords,\n",
+    "                locations=batch_houses + station_coords,\n",
     "                profile='driving-car',\n",
     "                sources=list(range(len(batch_houses))),\n",
-    "                destinations=list(range(len(batch_houses), len(batch_houses) + len(market_coords))),\n",
+    "                destinations=list(range(len(batch_houses), len(batch_houses) + len(station_coords))),\n",
     "                metrics=['distance'],\n",
     "                units='km'\n",
     "            )\n",
     "            distances = matrix['distances']\n",
     "            \n",
-    "            # Process the distances between each house and supermarket, finding the shortest\n",
+    "            # Process the distances between each house and station, finding the shortest\n",
     "            for j, house_distances in enumerate(distances[:len(batch_houses)]):\n",
     "                # Exclude None values and find the shortest distance\n",
     "                valid_distances = [d for d in house_distances if d is not None]\n",
@@ -115,10 +111,10 @@
     "                    min_distance = min(valid_distances)\n",
     "                    closest_station_idx = house_distances.index(min_distance)\n",
     "                    rent_address = rent_coordinates[i + j][2]\n",
-    "                    closest_market = market_coordinates[closest_station_idx][2]\n",
+    "                    closest_station = station_coordinates[closest_station_idx][2]\n",
     "                    all_shortest_distances.append({\n",
     "                        'rent_address': rent_address,\n",
-    "                        'closest_market': closest_market,\n",
+    "                        'closest_station': closest_station,\n",
     "                        'min_driving_distance_km': min_distance\n",
     "                    })\n",
     "        except Exception as e:\n",
@@ -128,11 +124,11 @@
     "    return all_shortest_distances\n",
     "\n",
     "# Process in batches\n",
-    "shortest_distances = calculate_distance_matrix_in_batches(house_coords, market_coords, batch_size=3)\n",
+    "shortest_distances = calculate_distance_matrix_in_batches(house_coords, station_coords, batch_size=12)\n",
     "\n",
     "# Save the shortest distance results to a CSV file\n",
     "shortest_distances_df = pd.DataFrame(shortest_distances)\n",
-    "output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\closest_market_distance_final_1.csv'\n",
+    "output_path = '../data/raw/external/API/1/closest_station_distance_final_1.csv'\n",
     "shortest_distances_df.to_csv(output_path, index=False)\n",
     "\n",
     "print(f\"Results have been saved to {output_path}\")\n"
