--- a/scripts/download_gym_locations.ipynb
+++ b/scripts/download_gym_locations.ipynb
@@ -2,60 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "维多利亚州超市位置数据已保存到 /home/yanbinh/data/victoria_supermarkets.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
     "\n",
-    "# Overpass API URL\n",
+    "\n",
+    "# Query URL for Nominatim API\n",
     "overpass_url = \"http://overpass-api.de/api/interpreter\"\n",
     "\n",
-    "# Overpass QL query to find all supermarkets in Victoria\n",
+    "# Query parameters\n",
     "overpass_query = \"\"\"\n",
     "[out:json];\n",
     "area[name=\"Victoria\"]->.searchArea;\n",
     "(\n",
-    "  node[\"shop\"=\"supermarket\"](area.searchArea);\n",
-    "  way[\"shop\"=\"supermarket\"](area.searchArea);\n",
-    "  relation[\"shop\"=\"supermarket\"](area.searchArea);\n",
+    "  node[\"leisure\"=\"fitness_centre\"](area.searchArea);\n",
+    "  way[\"leisure\"=\"fitness_centre\"](area.searchArea);\n",
+    "  relation[\"leisure\"=\"fitness_centre\"](area.searchArea);\n",
+    "\n",
+    "  node[\"leisure\"=\"gym\"](area.searchArea);\n",
+    "  way[\"leisure\"=\"gym\"](area.searchArea);\n",
+    "  relation[\"leisure\"=\"gym\"](area.searchArea);\n",
     ");\n",
     "out center;\n",
     "\"\"\"\n",
-    "\n",
-    "# Send the request and get the response\n",
     "response = requests.get(overpass_url, params={'data': overpass_query})\n",
     "data = response.json()\n",
     "\n",
-    "# Extract supermarket information, including latitude and longitude\n",
-    "supermarkets = []\n",
+    "# Extract information about the gym, including latitude and longitude\n",
+    "gyms = []\n",
     "for element in data['elements']:\n",
     "    if 'lat' in element and 'lon' in element:\n",
-    "        supermarket = {\n",
+    "        gym = {\n",
     "            'id': element['id'],\n",
     "            'name': element['tags'].get('name', 'Unknown'),\n",
     "            'latitude': element['lat'],\n",
     "            'longitude': element['lon']\n",
     "        }\n",
-    "        supermarkets.append(supermarket)\n",
+    "        gyms.append(gym)\n",
     "\n",
-    "# Convert to Pandas DataFrame for further processing\n",
-    "supermarkets_df = pd.DataFrame(supermarkets)\n",
+    "gyms_df = pd.DataFrame(gyms)\n",
     "\n",
-    "# Save the result to a CSV file\n",
-    "output_file_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\\\victoria_supermarkets.csv'\n",
-    "supermarkets_df.to_csv(output_file_path, index=False)\n",
+    "output_file_path = '../data/raw/external/victoria_gyms.csv'\n",
+    "gyms_df.to_csv(output_file_path, index=False)\n",
     "\n",
-    "print(f\"Supermarket location data in Victoria has been saved to {output_file_path}\")\n"
+    "print(f\"gym saved: {output_file_path}\")\n"
    ]
   }
  ],
