--- a/scripts/download_library_location.ipynb
+++ b/scripts/download_library_location.ipynb
@@ -2,53 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "维多利亚州图书馆位置数据已保存到 /home/yanbinh/data/victoria_libraries.csv\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
     "\n",
-    "\n",
-    "# Query URL for Nominatim API\n",
+    "# Overpass API URL\n",
     "overpass_url = \"http://overpass-api.de/api/interpreter\"\n",
     "\n",
-    "# Query parameters\n",
+    "# Overpass QL query to find all libraries in Victoria\n",
     "overpass_query = \"\"\"\n",
     "[out:json];\n",
     "area[name=\"Victoria\"]->.searchArea;\n",
     "(\n",
-    "  node[\"leisure\"=\"fitness_centre\"](area.searchArea);\n",
-    "  way[\"leisure\"=\"fitness_centre\"](area.searchArea);\n",
-    "  relation[\"leisure\"=\"fitness_centre\"](area.searchArea);\n",
-    "\n",
-    "  node[\"leisure\"=\"gym\"](area.searchArea);\n",
-    "  way[\"leisure\"=\"gym\"](area.searchArea);\n",
-    "  relation[\"leisure\"=\"gym\"](area.searchArea);\n",
+    "  node[\"amenity\"=\"library\"](area.searchArea);\n",
+    "  way[\"amenity\"=\"library\"](area.searchArea);\n",
+    "  relation[\"amenity\"=\"library\"](area.searchArea);\n",
     ");\n",
     "out center;\n",
     "\"\"\"\n",
+    "\n",
+    "# Send the request and get the response\n",
     "response = requests.get(overpass_url, params={'data': overpass_query})\n",
     "data = response.json()\n",
     "\n",
-    "# Extract information about the gym, including latitude and longitude\n",
-    "gyms = []\n",
+    "# Extract library information, including latitude and longitude\n",
+    "libraries = []\n",
     "for element in data['elements']:\n",
     "    if 'lat' in element and 'lon' in element:\n",
-    "        gym = {\n",
+    "        library = {\n",
     "            'id': element['id'],\n",
     "            'name': element['tags'].get('name', 'Unknown'),\n",
     "            'latitude': element['lat'],\n",
     "            'longitude': element['lon']\n",
     "        }\n",
-    "        gyms.append(gym)\n",
+    "        libraries.append(library)\n",
     "\n",
-    "gyms_df = pd.DataFrame(gyms)\n",
+    "# Convert to Pandas DataFrame for further processing\n",
+    "libraries_df = pd.DataFrame(libraries)\n",
     "\n",
-    "output_file_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\\\victoria_gyms.csv'\n",
-    "gyms_df.to_csv(output_file_path, index=False)\n",
+    "# Save the result to a CSV file\n",
+    "output_file_path = '../data/raw/external/victoria_libraries.csv'\n",
+    "libraries_df.to_csv(output_file_path, index=False)\n",
     "\n",
-    "print(f\"gym saved: {output_file_path}\")\n"
+    "print(f\"library saved: {output_file_path}\")"
    ]
   }
  ],
