--- a/scripts/download_metro_stations.ipynb
+++ b/scripts/download_metro_stations.ipynb
@@ -2,32 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "维多利亚州警察局位置数据已保存为 CSV 文件：/home/yanbinh/data/victoria_police_stations.csv\n"
+      "         id            name   latitude   longitude\n",
+      "0  27071462  Mount Waverley -37.875264  145.128126\n",
+      "1  27091664     Jordanville -37.873663  145.112269\n",
+      "2  27123069    East Malvern -37.876861  145.069171\n",
+      "3  29749085     Mooroolbark -37.784697  145.313186\n",
+      "4  29764097       Ashburton -37.862047  145.081291\n",
+      "地铁站位置数据已保存到 /home/yanbinh/data/victoria_metro_stations.csv\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
+    "import json\n",
     "import pandas as pd\n",
     "\n",
     "# Overpass API URL\n",
     "overpass_url = \"http://overpass-api.de/api/interpreter\"\n",
     "\n",
-    "# Overpass QL query to find all police stations in Victoria\n",
+    "# Overpass QL query to find all metro stations in Victoria\n",
     "overpass_query = \"\"\"\n",
     "[out:json];\n",
     "area[name=\"Victoria\"]->.searchArea;\n",
     "(\n",
-    "  node[\"amenity\"=\"police\"](area.searchArea);\n",
-    "  way[\"amenity\"=\"police\"](area.searchArea);\n",
-    "  relation[\"amenity\"=\"police\"](area.searchArea);\n",
+    "  node[\"railway\"=\"station\"](area.searchArea);\n",
+    "  way[\"railway\"=\"station\"](area.searchArea);\n",
+    "  relation[\"railway\"=\"station\"](area.searchArea);\n",
     ");\n",
     "out center;\n",
     "\"\"\"\n",
@@ -36,26 +43,29 @@
     "response = requests.get(overpass_url, params={'data': overpass_query})\n",
     "data = response.json()\n",
     "\n",
-    "# Extract police station information, including latitude and longitude\n",
-    "police_stations = []\n",
+    "# Extract metro station information from the response\n",
+    "stations = []\n",
     "for element in data['elements']:\n",
-    "    if 'lat' in element and 'lon' in element:\n",
-    "        police_station = {\n",
+    "    if 'lat' in element and 'lon' in element:  # Check if latitude and longitude are available\n",
+    "        station = {\n",
     "            'id': element['id'],\n",
     "            'name': element['tags'].get('name', 'Unknown'),\n",
     "            'latitude': element['lat'],\n",
     "            'longitude': element['lon']\n",
     "        }\n",
-    "        police_stations.append(police_station)\n",
+    "        stations.append(station)\n",
     "\n",
-    "# Convert to Pandas DataFrame for further processing\n",
-    "police_stations_df = pd.DataFrame(police_stations)\n",
+    "# Convert to DataFrame for further processing\n",
+    "stations_df = pd.DataFrame(stations)\n",
+    "\n",
+    "# View the first few rows of data\n",
+    "print(stations_df.head())\n",
     "\n",
     "# Save the result to a CSV file\n",
-    "output_file_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\\\victoria_police_stations.csv'\n",
-    "police_stations_df.to_csv(output_file_path, index=False)\n",
+    "output_file_path = '../data/raw/external/victoria_metro_stations.csv'\n",
+    "stations_df.to_csv(output_file_path, index=False)\n",
     "\n",
-    "print(f\"Police station location data in Victoria has been saved as a CSV file: {output_file_path}\")\n"
+    "print(f\"Metro station saved: {output_file_path}\")\n"
    ]
   }
  ],
