--- a/notebooks/calculate_min_station_distance.ipynb
+++ b/notebooks/calculate_min_station_distance.ipynb
@@ -2,42 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "房屋和车站的GeoJSON文件已生成\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import geojson\n",
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
-    "# Read the house and station CSV files\n",
-    "houses_df = pd.read_csv('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\property_addresses_to_lat_lng.csv')\n",
-    "stations_df = pd.read_csv(\"D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\\\victoria_metro_stations.csv\")\n",
+    "# 读取房屋和车站的 CSV 文件\n",
+    "houses_df = pd.read_csv('/Users/fenglingyi/Downloads/groupwork_generate/property_addresses_to_lat_lng_2_final.csv')  # 替换为你的房屋CSV文件路径\n",
+    "stations_df = pd.read_csv('/Users/fenglingyi/Downloads/groupwork_file/victoria_metro_stations.csv')  # 替换为你的车站CSV文件路径\n",
     "\n",
-    "# Drop rows with missing longitude and latitude\n",
     "houses_df = houses_df.dropna(subset=['longitude', 'latitude'])\n",
     "stations_df = stations_df.dropna(subset=['longitude', 'latitude'])\n",
     "\n",
-    "# Function to create GeoJSON Features\n",
+    "# 创建 GeoJSON Feature 的函数\n",
     "def create_geojson_feature(row, feature_type='house'):\n",
     "    point = Point((row['longitude'], row['latitude']))\n",
     "    properties = {\n",
-    "        'address': row.get('address', 'unknown'),\n",
+    "        'address': row.get('address', 'unknown'),  # 如果没有 'address' 列，请根据你的实际列修改\n",
     "        'type': feature_type\n",
     "    }\n",
     "    return Feature(geometry=point, properties=properties)\n",
     "\n",
-    "# Convert house data to GeoJSON Features\n",
+    "# 转换房屋数据为 GeoJSON Feature\n",
     "house_features = houses_df.apply(lambda row: create_geojson_feature(row, 'house'), axis=1).tolist()\n",
     "house_feature_collection = FeatureCollection(house_features)\n",
     "\n",
-    "# Convert station data to GeoJSON Features\n",
+    "# 转换车站数据为 GeoJSON Feature\n",
     "station_features = stations_df.apply(lambda row: create_geojson_feature(row, 'station'), axis=1).tolist()\n",
     "station_feature_collection = FeatureCollection(station_features)\n",
     "\n",
-    "# Save house and station data as separate GeoJSON files\n",
-    "houses_geojson_output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\property_geojson.geojson'\n",
-    "stations_geojson_output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\vic_metro_stations_geojson.geojson'\n",
+    "\n",
+    "# 保存房屋和车站分别为 GeoJSON 文件\n",
+    "houses_geojson_output_path = '/Users/fenglingyi/Downloads/groupwork_generate/property_geojson.geojson'\n",
+    "stations_geojson_output_path = '/Users/fenglingyi/Downloads/groupwork_generate/vic_metro_stations_geojson.geojson'\n",
     "\n",
     "with open(houses_geojson_output_path, 'w') as f:\n",
     "    geojson.dump(house_feature_collection, f)\n",
@@ -45,32 +53,41 @@
     "with open(stations_geojson_output_path, 'w') as f:\n",
     "    geojson.dump(station_feature_collection, f)\n",
     "\n",
-    "print(\"GeoJSON files for houses and stations have been generated\")\n"
+    "\n",
+    "print(\"房屋和车站的GeoJSON文件已生成\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "结果已保存到 /home/yanbinh/data/rent_closest_station_distance_matrix_batched.csv\n"
+     ]
+    }
+   ],
    "source": [
     "import geojson\n",
     "import openrouteservice\n",
     "import pandas as pd\n",
     "import time\n",
     "\n",
-    "# Initialize OpenRouteService API client\n",
-    "api_key = '5b3ce3597851110001cf6248dda07331ae64496fa25c4e54b59fba30'\n",
+    "# 初始化 OpenRouteService API 客户端\n",
+    "api_key = '5b3ce3597851110001cf6248dda07331ae64496fa25c4e54b59fba30'  # 请替换为你的 OpenRouteService API Key\n",
     "client = openrouteservice.Client(key=api_key)\n",
     "\n",
-    "# Read GeoJSON files\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\property_geojson.geojson', 'r') as f:\n",
+    "# 读取 GeoJSON 文件\n",
+    "with open('/Users/fenglingyi/Downloads/groupwork_generate/property_geojson.geojson', 'r') as f:\n",
     "    rent_geojson = geojson.load(f)\n",
     "\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\vic_metro_stations_geojson.geojson', 'r') as f:\n",
+    "with open('/Users/fenglingyi/Downloads/groupwork_generate/vic_metro_stations_geojson.geojson', 'r') as f:\n",
     "    stations_geojson = geojson.load(f)\n",
     "\n",
-    "# Extract latitude and longitude\n",
+    "# 提取经纬度\n",
     "def extract_coordinates(features):\n",
     "    coordinates = []\n",
     "    for feature in features['features']:\n",
@@ -82,11 +99,11 @@
     "rent_coordinates = extract_coordinates(rent_geojson)\n",
     "station_coordinates = extract_coordinates(stations_geojson)\n",
     "\n",
-    "# Extract coordinates for houses and stations\n",
+    "# 提取房屋和车站的经纬度\n",
     "house_coords = [(lon, lat) for lat, lon, _ in rent_coordinates]\n",
     "station_coords = [(lon, lat) for lat, lon, _ in station_coordinates]\n",
     "\n",
-    "# Use OpenRouteService API to calculate distances in batches\n",
+    "# 使用 OpenRouteService API 批量计算距离并按批次处理\n",
     "def calculate_distance_matrix_in_batches(house_coords, station_coords, batch_size=12):\n",
     "    all_shortest_distances = []\n",
     "    \n",
@@ -103,9 +120,9 @@
     "            )\n",
     "            distances = matrix['distances']\n",
     "            \n",
-    "            # Process the distances between each house and station, finding the shortest\n",
+    "            # 处理每个房屋和车站的距离，找出最短的距离\n",
     "            for j, house_distances in enumerate(distances[:len(batch_houses)]):\n",
-    "                # Exclude None values and find the shortest distance\n",
+    "                # 排除 None 值的距离，找出最小距离\n",
     "                valid_distances = [d for d in house_distances if d is not None]\n",
     "                if valid_distances:\n",
     "                    min_distance = min(valid_distances)\n",
@@ -115,31 +132,31 @@
     "                    all_shortest_distances.append({\n",
     "                        'rent_address': rent_address,\n",
     "                        'closest_station': closest_station,\n",
-    "                        'min_driving_distance_km': min_distance\n",
+    "                        'minimum_distance_station': min_distance\n",
     "                    })\n",
     "        except Exception as e:\n",
     "            print(f\"Error calculating distance matrix: {e}\")\n",
-    "        time.sleep(1)  # Prevent rate-limiting\n",
+    "        time.sleep(1)  # 防止触发速率限制\n",
     "    \n",
     "    return all_shortest_distances\n",
     "\n",
-    "# Process in batches\n",
+    "# 分批处理\n",
     "shortest_distances = calculate_distance_matrix_in_batches(house_coords, station_coords, batch_size=12)\n",
     "\n",
-    "# Save the shortest distance results to a CSV file\n",
+    "# 保存最短距离结果为 CSV 文件\n",
     "shortest_distances_df = pd.DataFrame(shortest_distances)\n",
-    "output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\closest_station_distance_final_1.csv'\n",
+    "output_path = '/Users/fenglingyi/Downloads/groupwork_final/closest_stations_distance_final_2.csv'\n",
     "shortest_distances_df.to_csv(output_path, index=False)\n",
     "\n",
-    "print(f\"Results have been saved to {output_path}\")\n"
+    "print(f\"结果已保存到 {output_path}\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (myenv)",
    "language": "python",
-   "name": "python3"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -151,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
