--- a/notebooks/cbd_distance.ipynb
+++ b/notebooks/cbd_distance.ipynb
@@ -10,30 +10,30 @@
     "import geojson\n",
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
-    "# Read the police station CSV file\n",
-    "market_df = pd.read_csv('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\\\victoria_police_stations.csv')\n",
-    "market_df = market_df.dropna(subset=['longitude', 'latitude'])\n",
+    "# Read the gym CSV file\n",
+    "market_df = pd.read_csv('../data/raw/external/melbourne_cbd_coordinates.csv')\n",
+    "market_df = market_df.dropna(subset=['Longitude', 'Latitude'])\n",
     "\n",
-    "# Function to create GeoJSON Features\n",
-    "def create_geojson_feature(row, feature_type='police_station'):\n",
-    "    point = Point((row['longitude'], row['latitude']))\n",
+    "# Function to create a GeoJSON Feature\n",
+    "def create_geojson_feature(row, feature_type='house'):\n",
+    "    point = Point((row['Longitude'], row['Latitude']))\n",
     "    properties = {\n",
-    "        'address': row.get('address', 'unknown'),  # Modify the 'address' column as needed\n",
+    "        'address': row.get('address', 'unknown'),  # Modify 'address' column name as per your actual data\n",
     "        'type': feature_type\n",
     "    }\n",
     "    return Feature(geometry=point, properties=properties)\n",
     "\n",
-    "# Convert police station data to GeoJSON Features\n",
-    "gym_features = market_df.apply(lambda row: create_geojson_feature(row, 'police_station'), axis=1).tolist()\n",
+    "# Convert gym data to GeoJSON Features\n",
+    "gym_features = market_df.apply(lambda row: create_geojson_feature(row, 'cbd'), axis=1).tolist()\n",
     "gym_feature_collection = FeatureCollection(gym_features)\n",
     "\n",
-    "# Save police station data as a GeoJSON file\n",
-    "houses_geojson_output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\\\police_stations_geojson.geojson'\n",
+    "# Save gym data as a GeoJSON file\n",
+    "houses_geojson_output_path = '../data/raw/external/API/1/cbd_geojson.geojson'\n",
     "\n",
     "with open(houses_geojson_output_path, 'w') as f:\n",
     "    geojson.dump(gym_feature_collection, f)\n",
     "\n",
-    "print(\"The GeoJSON file for police stations has been generated\")\n"
+    "print(\"The GeoJSON file for gym data has been generated\")\n"
    ]
   },
   {
@@ -48,15 +48,15 @@
     "import time\n",
     "\n",
     "# Initialize OpenRouteService API client\n",
-    "api_key = '5b3ce3597851110001cf6248dda07331ae64496fa25c4e54b59fba30'\n",
+    "api_key = '5b3ce3597851110001cf62483b1a72a766444e06858b2f513c1a4ac6'  # OpenRouteService API Key\n",
     "client = openrouteservice.Client(key=api_key)\n",
     "\n",
     "# Read GeoJSON files\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\property_geojson.geojson', 'r') as f:\n",
+    "with open('../data/raw/external/API/1/property_geojson.geojson', 'r') as f:\n",
     "    rent_geojson = geojson.load(f)\n",
     "\n",
-    "with open('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\police_stations_geojson.geojson', 'r') as f:\n",
-    "    police_geojson = geojson.load(f)\n",
+    "with open('../data/raw/external/API/1/cbd_geojson.geojson', 'r') as f:\n",
+    "    gym_geojson = geojson.load(f)\n",
     "\n",
     "# Extract latitude and longitude\n",
     "def extract_coordinates(features):\n",
@@ -68,41 +68,41 @@
     "    return coordinates\n",
     "\n",
     "rent_coordinates = extract_coordinates(rent_geojson)\n",
-    "police_coordinates = extract_coordinates(police_geojson)\n",
+    "gym_coordinates = extract_coordinates(gym_geojson)\n",
     "\n",
-    "# Extract house and police station coordinates\n",
+    "# Extract coordinates for houses and gyms\n",
     "house_coords = [(lon, lat) for lat, lon, _ in rent_coordinates]\n",
-    "police_coords = [(lon, lat) for lat, lon, _ in police_coordinates]\n",
+    "gym_coords = [(lon, lat) for lat, lon, _ in gym_coordinates]\n",
     "\n",
-    "# Use OpenRouteService API to calculate distances in batches\n",
-    "def calculate_distance_matrix_in_batches(house_coords, police_coords, batch_size=16):\n",
+    "# Use OpenRouteService API to calculate distance in batches\n",
+    "def calculate_distance_matrix_in_batches(house_coords, gym_coords, batch_size=100):\n",
     "    all_shortest_distances = []\n",
     "    \n",
     "    for i in range(0, len(house_coords), batch_size):\n",
     "        batch_houses = house_coords[i:i + batch_size]\n",
     "        try:\n",
     "            matrix = client.distance_matrix(\n",
-    "                locations=batch_houses + police_coords,\n",
+    "                locations=batch_houses + gym_coords,\n",
     "                profile='driving-car',\n",
     "                sources=list(range(len(batch_houses))),\n",
-    "                destinations=list(range(len(batch_houses), len(batch_houses) + len(police_coords))),\n",
+    "                destinations=list(range(len(batch_houses), len(batch_houses) + len(gym_coords))),\n",
     "                metrics=['distance'],\n",
     "                units='km'\n",
     "            )\n",
     "            distances = matrix['distances']\n",
     "            \n",
-    "            # Process the distances between each house and police station, finding the shortest\n",
+    "            # Process the distances between each house and gym, finding the shortest\n",
     "            for j, house_distances in enumerate(distances[:len(batch_houses)]):\n",
     "                # Exclude None values and find the shortest distance\n",
     "                valid_distances = [d for d in house_distances if d is not None]\n",
     "                if valid_distances:\n",
     "                    min_distance = min(valid_distances)\n",
-    "                    closest_police_idx = house_distances.index(min_distance)\n",
+    "                    closest_gym_idx = house_distances.index(min_distance)\n",
     "                    rent_address = rent_coordinates[i + j][2]\n",
-    "                    closest_police = police_coordinates[closest_police_idx][2]\n",
+    "                    closest_gym = gym_coordinates[closest_gym_idx][2]\n",
     "                    all_shortest_distances.append({\n",
     "                        'rent_address': rent_address,\n",
-    "                        'closest_police': closest_police,\n",
+    "                        'closest_gym': closest_gym,\n",
     "                        'min_driving_distance_km': min_distance\n",
     "                    })\n",
     "        except Exception as e:\n",
@@ -112,11 +112,11 @@
     "    return all_shortest_distances\n",
     "\n",
     "# Process in batches\n",
-    "shortest_distances = calculate_distance_matrix_in_batches(house_coords, police_coords, batch_size=16)\n",
+    "shortest_distances = calculate_distance_matrix_in_batches(house_coords, gym_coords, batch_size=100)\n",
     "\n",
     "# Save the shortest distance results to a CSV file\n",
     "shortest_distances_df = pd.DataFrame(shortest_distances)\n",
-    "output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\API\\\\1\\closest_police_distance_final_1.csv'\n",
+    "output_path = '../data/raw/external/API/1/closest_cbd_distance_final_1.csv'\n",
     "shortest_distances_df.to_csv(output_path, index=False)\n",
     "\n",
     "print(f\"Results have been saved to {output_path}\")\n"
