--- a/notebooks/property3_merge.ipynb
+++ b/notebooks/property3_merge.ipynb
@@ -555,7 +555,7 @@
     "\n",
     "# Load the required data files\n",
     "unique_merged_data = pd.read_csv(r\"../data/curated/external/unique_merged_data.csv\")\n",
-    "crime_data = pd.read_csv(r\"D:\\STUDYfile\\ADS\\P2\\notebook\\data_merge\\LGA_crime_postcode.csv\")\n",
+    "crime_data = pd.read_csv(r\"../data/curated/crime_by_year.csv/LGA_crime_postcode.csv\")\n",
     "\n",
     "# Filter crime data by year\n",
     "crime_data_2021 = crime_data[crime_data['Year'] == 2021][['Postcode', 'Offence Count']]\n",
