--- a/scripts/download_supermarket_locations.ipynb
+++ b/scripts/download_supermarket_locations.ipynb
@@ -9,32 +9,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         id            name   latitude   longitude\n",
-      "0  27071462  Mount Waverley -37.875264  145.128126\n",
-      "1  27091664     Jordanville -37.873663  145.112269\n",
-      "2  27123069    East Malvern -37.876861  145.069171\n",
-      "3  29749085     Mooroolbark -37.784697  145.313186\n",
-      "4  29764097       Ashburton -37.862047  145.081291\n",
-      "地铁站位置数据已保存到 /home/yanbinh/data/victoria_metro_stations.csv\n"
+      "维多利亚州超市位置数据已保存到 /home/yanbinh/data/victoria_supermarkets.csv\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
-    "import json\n",
     "import pandas as pd\n",
     "\n",
     "# Overpass API URL\n",
     "overpass_url = \"http://overpass-api.de/api/interpreter\"\n",
     "\n",
-    "# Overpass QL query to find all metro stations in Victoria\n",
+    "# Overpass QL query to find all supermarkets in Victoria\n",
     "overpass_query = \"\"\"\n",
     "[out:json];\n",
     "area[name=\"Victoria\"]->.searchArea;\n",
     "(\n",
-    "  node[\"railway\"=\"station\"](area.searchArea);\n",
-    "  way[\"railway\"=\"station\"](area.searchArea);\n",
-    "  relation[\"railway\"=\"station\"](area.searchArea);\n",
+    "  node[\"shop\"=\"supermarket\"](area.searchArea);\n",
+    "  way[\"shop\"=\"supermarket\"](area.searchArea);\n",
+    "  relation[\"shop\"=\"supermarket\"](area.searchArea);\n",
     ");\n",
     "out center;\n",
     "\"\"\"\n",
@@ -43,29 +36,26 @@
     "response = requests.get(overpass_url, params={'data': overpass_query})\n",
     "data = response.json()\n",
     "\n",
-    "# Extract metro station information from the response\n",
-    "stations = []\n",
+    "# Extract supermarket information, including latitude and longitude\n",
+    "supermarkets = []\n",
     "for element in data['elements']:\n",
-    "    if 'lat' in element and 'lon' in element:  # Check if latitude and longitude are available\n",
-    "        station = {\n",
+    "    if 'lat' in element and 'lon' in element:\n",
+    "        supermarket = {\n",
     "            'id': element['id'],\n",
     "            'name': element['tags'].get('name', 'Unknown'),\n",
     "            'latitude': element['lat'],\n",
     "            'longitude': element['lon']\n",
     "        }\n",
-    "        stations.append(station)\n",
+    "        supermarkets.append(supermarket)\n",
     "\n",
-    "# Convert to DataFrame for further processing\n",
-    "stations_df = pd.DataFrame(stations)\n",
-    "\n",
-    "# View the first few rows of data\n",
-    "print(stations_df.head())\n",
+    "# Convert to Pandas DataFrame for further processing\n",
+    "supermarkets_df = pd.DataFrame(supermarkets)\n",
     "\n",
     "# Save the result to a CSV file\n",
-    "output_file_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\\\victoria_metro_stations.csv'\n",
-    "stations_df.to_csv(output_file_path, index=False)\n",
+    "output_file_path = '../data/raw/external/victoria_supermarkets.csv'\n",
+    "supermarkets_df.to_csv(output_file_path, index=False)\n",
     "\n",
-    "print(f\"Metro station saved: {output_file_path}\")\n"
+    "print(f\"Supermarket location data in Victoria has been saved to {output_file_path}\")\n"
    ]
   }
  ],
