--- a/scripts/downloda_police_stations.ipynb
+++ b/scripts/downloda_police_stations.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "维多利亚州图书馆位置数据已保存到 /home/yanbinh/data/victoria_libraries.csv\n"
+      "维多利亚州警察局位置数据已保存为 CSV 文件：/home/yanbinh/data/victoria_police_stations.csv\n"
      ]
     }
    ],
@@ -20,14 +20,14 @@
     "# Overpass API URL\n",
     "overpass_url = \"http://overpass-api.de/api/interpreter\"\n",
     "\n",
-    "# Overpass QL query to find all libraries in Victoria\n",
+    "# Overpass QL query to find all police stations in Victoria\n",
     "overpass_query = \"\"\"\n",
     "[out:json];\n",
     "area[name=\"Victoria\"]->.searchArea;\n",
     "(\n",
-    "  node[\"amenity\"=\"library\"](area.searchArea);\n",
-    "  way[\"amenity\"=\"library\"](area.searchArea);\n",
-    "  relation[\"amenity\"=\"library\"](area.searchArea);\n",
+    "  node[\"amenity\"=\"police\"](area.searchArea);\n",
+    "  way[\"amenity\"=\"police\"](area.searchArea);\n",
+    "  relation[\"amenity\"=\"police\"](area.searchArea);\n",
     ");\n",
     "out center;\n",
     "\"\"\"\n",
@@ -36,26 +36,26 @@
     "response = requests.get(overpass_url, params={'data': overpass_query})\n",
     "data = response.json()\n",
     "\n",
-    "# Extract library information, including latitude and longitude\n",
-    "libraries = []\n",
+    "# Extract police station information, including latitude and longitude\n",
+    "police_stations = []\n",
     "for element in data['elements']:\n",
     "    if 'lat' in element and 'lon' in element:\n",
-    "        library = {\n",
+    "        police_station = {\n",
     "            'id': element['id'],\n",
     "            'name': element['tags'].get('name', 'Unknown'),\n",
     "            'latitude': element['lat'],\n",
     "            'longitude': element['lon']\n",
     "        }\n",
-    "        libraries.append(library)\n",
+    "        police_stations.append(police_station)\n",
     "\n",
     "# Convert to Pandas DataFrame for further processing\n",
-    "libraries_df = pd.DataFrame(libraries)\n",
+    "police_stations_df = pd.DataFrame(police_stations)\n",
     "\n",
     "# Save the result to a CSV file\n",
-    "output_file_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\\\raw\\external\\\\victoria_libraries.csv'\n",
-    "libraries_df.to_csv(output_file_path, index=False)\n",
+    "output_file_path = '../data/raw/external/victoria_police_stations.csv'\n",
+    "police_stations_df.to_csv(output_file_path, index=False)\n",
     "\n",
-    "print(f\"library saved: {output_file_path}\")"
+    "print(f\"Police station location data in Victoria has been saved as a CSV file: {output_file_path}\")\n"
    ]
   }
  ],
